Removed unused things, small improvements